trunk/Archive2/e4/61e6518f8233de/output
main.cpp: In function 'void kerblam()':
main.cpp:6:28: error: 'void r' has incomplete type
         auto r = breaking( );
                            ^
main.cpp:7:16: error: return-statement with a value, in function returning 'void' [-fpermissive]
         return r;
                ^
